# integrals

./: CMakeLists.txt  input.txt  main.cpp
integralTrapezoid/: integralTrapezoid.cpp  integralTrapezoid.h
leftIntegral/: leftIntegral.cpp  leftIntegral.h
rightIntegral/: rightIntegral.cpp  rightIntegral.h
tf/: functionType.h  tf.cpp
